# file_server_v2

./: .env  .gitignore  ANALYSIS_RESULTS.md  CLAUDE.md  CLIENT_OPTIMIZATION_ANALYSIS.md  Makefile  OPTIMIZATION_ANALYSIS.md  package.json  pnpm-lock.yaml  web_file_browser.code-workspace
.claude/: launch.json
alpine/: eslint.config.mjs  package.json  tsconfig.node.json
alpine/src/scripts/: dom.ts  index.ts
alpine/src/views/: files_error.ejs  head.ejs  nav.ejs  (+3 more)
client/: .gitignore  CLIENT_OPTIMIZATION_ANALYSIS.md  README.md  components.d.ts  components.json  eslint.config.mjs  eslint.config.ts  index.html  modules.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rsbuild.config.ts  stylelint.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts
client/public/: browserconfig.xml  prism.min.js  site.webmanifest
client/src/: App.vue  config.template.toml  env.d.ts  index.ejs  index.html  main.ts
server/: .gitignore  Cargo.toml  Dockerfile  Makefile  OPTIMIZATIONS.md  README.md  config.template.toml  docker-compose.yml  metadata  rustfmt.toml
server/scripts/: check_faststart.py
server/src/: app_config.rs  main.rs  util.rs
server/src/enums/: disposition_kind.rs
server/src/lib/: cache.rs  cors.rs  error.rs  gatekeeper.rs  media_cache.rs  referer_guard.rs
server/src/services/: read_dir.rs  read_dir.v2.rs  read_file.rs  resource_handler.rs
server/src/structs/: entry_details.rs  entry_type.rs  query_params.rs  sort_dir.rs  sort_key.rs
src/: config.rs  util.rs
src/services/: resource_handler.rs
src/structs/: query_params.rs
(+231 files in other folders)
