[package]
name = "web_file_browser_server"
version = "1.0.0"
edition = "2024"
license = "MPL-2.0"

[dependencies]
actix-files = "0.6.6"
actix-web = "4"
chrono = "0.4.40"
config = { version = "0.15.11", features = ["toml"] }
env_logger = "0.11.8"
file-format = { version = "0.26.0", features = ["reader"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
